# architecture-patterns-with-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
chapter00/: Makefile  pyproject.toml
chapter00/src/: app.py  main.py
chapter00/src/constant/: __init__.py  api.py  error.py
chapter00/src/custom/: __init__.py
chapter00/src/custom/types/: __init__.py
chapter00/src/custom/types/api/: __init__.py  duckduckgo.py
chapter00/src/custom/types/error/: __init__.py  client.py
chapter00/src/router/: __init__.py  search.py
chapter00/src/schema/: __init__.py  base_error.py
chapter00/src/schema/search/: __init__.py  response.py
chapter00/src/service/: __init__.py  search.py
chapter00/src/service/api/: __init__.py  duckduckgo.py
chapter01/: README.md  pyproject.toml  test_model.py
chapter01/src/: models.py  test_allocate.py  test_batches.py  value_object.py
