[tool.poetry]
name = "architecture-patterns-with-python"
version = "1"
description = "Architecture Patterns with Python"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "architecture_patterns_with_python"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.linter.dependencies]
pre-commit = "^3.3.2"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
py_version = 39
skip = ["__init__.py"]
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.mypy]
python_version = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
